fixed skills align to center

--- a/SCSS/_about.scss
+++ b/SCSS/_about.scss
@@ -88,7 +88,7 @@ color: $active-link;
   flex-direction: column;
   overflow-y: auto;
   overflow-x: hidden;
-  min-width: fit-content;
+  min-width: min-content;
 }
 
 
