--- a/SCSS/_works.scss
+++ b/SCSS/_works.scss
@@ -482,7 +482,7 @@ background-size: 100% 100%;
     height: 90%;
     // background: rgb(57,56,56);
     // background: linear-gradient(45deg, rgba(50, 57, 62, 0.19) 0%, rgba(176, 174, 172, 0.19) 37%, rgba(50, 57, 62, 0.19) 100%);
-    background-color: rgba(30, 30, 30, 0.5);
+    background-color: rgba(30, 30, 30, 0.6);
     // backdrop-filter: blur(10px);
     // box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
     // border: 1px solid rgba(255, 255, 255, 0.25);
